# playground

./: .cursorrules  Makefile  README.md  analyze.sh  build-debug.sh  build.sh  meson-clang.ini  meson.build  meson_options.txt  requirements.txt  run.sh  stack.txt
exp/: factorial.cpp  factorial.hpp  main.cpp  meson.build
exp/targets/: complex.cpp  factorial_cli.cpp  factorial_file_in.cpp  hello.cpp  meson.build
ptest/: conftest.py  test_background_fail.py  test_background_fix_fail.py  test_base_example.py  test_c1.py  test_c2.py  test_c3.py  test_c4.py  test_c6.py  test_c7.py  test_claude.py  test_claude_4.py  test_claude_5.py  test_claude_6.py  test_claude_8.py  test_claude_min.py  test_fixture_fix.py  test_g1.py  test_g2.py  test_g3.py  test_g4.py  test_g5.py  test_gpt_7.py  test_save3.py  test_save_2.py  test_save_work.py
ptest/sqltest/: dbtest.py  requirements_proto.txt  test_proto_to_db.py  test_simple_sqlite.py
scripts/: latest.sh
xdp/: xdp_fwd2.c  xdp_fwd2_refactored.c
